# chembl-target-class-prediction_L3

./: .gitignore  README.md  analyze_unseen_l3_classes_with_mlp.py  analyze_unseen_l3_direct_tanimoto.py  analyze_v3_cluster_similarity.py  audit_target_class_csv.py  generate_morgan_fingerprints_l3_2_2048.py  make_l3_single_label_dataset.py  pyproject.toml  train_mlp_l3_2_2048_v1.py  train_mlp_l3_2_2048_v2_scaffold.py  train_mlp_l3_2_2048_v3_cluster.py  train_mlp_l3_2_2048_v4_controlled_similarity.py
data/processed/: target_class_l3_2_2048_kmeans_500_cluster_ids.npy  target_class_l3_2_2048_y.npy  unseen_l3_min100_2_2048_metadata.csv
reports/diagnostics/: mlp_l3_2_2048_v1_test_predictions.csv  mlp_l3_2_2048_v3_cluster_test_predictions.csv  mlp_l3_2_2048_v4_controlled_similarity_test_predictions.csv
reports/metrics/: mlp_l3_2_2048_v1_classification_report.csv  mlp_l3_2_2048_v1_config.json  mlp_l3_2_2048_v1_confusion_matrix.csv  mlp_l3_2_2048_v1_confusion_matrix_normalized.csv  mlp_l3_2_2048_v1_test_metrics.csv  mlp_l3_2_2048_v1_training_history.csv  mlp_l3_2_2048_v2_scaffold_classification_report.csv  mlp_l3_2_2048_v2_scaffold_config.json  mlp_l3_2_2048_v2_scaffold_confusion_matrix.csv  mlp_l3_2_2048_v2_scaffold_confusion_matrix_normalized.csv  mlp_l3_2_2048_v2_scaffold_scaffold_stats.csv  mlp_l3_2_2048_v2_scaffold_split_summary.csv  mlp_l3_2_2048_v2_scaffold_test_metrics.csv  mlp_l3_2_2048_v2_scaffold_training_history.csv  mlp_l3_2_2048_v3_cluster_classification_report.csv  mlp_l3_2_2048_v3_cluster_cluster_stats.csv  mlp_l3_2_2048_v3_cluster_config.json  (+39 more)
