[project]
name = "project-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "rdkit>=2026.3.2",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]
